--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 						</a>
 					</li>
 					<li>
-						<a class="routerLink" href="/signup">
+						<a class="routerLink" href="/register">
 							<span class="icon-md"> person_add </span>
-							<span data-lang-id="linkSignup">Opret Bruger</span>
+							<span data-lang-id="linkRegister">Opret Bruger</span>
 						</a>
 					</li>
 					<li>
@@ -96,7 +96,7 @@
 				</ul>
 			</div>
 		</nav>
-		<main id="app"></main>
+		<main id="root"></main>
 		<footer>
 			<small>
 				<span class="icon-sm"> copyright </span>
