--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -1,5 +1,5 @@
 <article class="page-auth width-container-sm">
-	<h2 data-lang-id="pageLoginTitle">Log ind</h2>
+	<h2 data-lang-id="pageLoginTitle">Opret Bruger</h2>
 	<form novalidate>
 		<div class="form-group">
 			<label for="username" data-lang-id="formUsername">Brugernavn</label>
