--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vendel.dk</title>
 
-		<script src="router.js" async></script>
+		<script src="/router.js"></script>
 
 		<link
 			href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Inter:wght@400;700&display=swap"
@@ -25,17 +25,14 @@
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,200&display=swap"
 			rel="stylesheet" />
 
-		<link rel="stylesheet" href="assets/main.css" />
+		<link rel="stylesheet" href="/assets/main.css" />
 	</head>
 	<body>
 		<header>
 			<div class="width-container-xl">
-				<button
-					id="languageSwitcher"
-					aria-label="Skift sidens sprog"
-					data-lang-id="btnLanguageSwitcher">
-					<img src="/assets/img/language-danish.svg" alt="DK flag" />
-				</button>
+				<a class="languageLink" aria-label="Skift sidens sprog" data-lang-id="btnLanguageSwitcher">
+					<img src="/assets/img/language-da.svg" alt="DK flag" />
+				</a>
 				<h1><a class="routerLink" href="/home">Vendel.dk</a></h1>
 				<button id="themeSwitcher" aria-label="Skift sidens tema" data-lang-id="btnThemeSwitcher">
 					<span class="icon-lg"> light_mode </span>
