router changes (Very close to finish)

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		<header>
 			<div class="width-container-xl">
 				<a class="languageLink" aria-label="Skift sidens sprog" data-lang-id="btnLanguageSwitcher">
-					<img src="/assets/img/language-da.svg" alt="DK flag" />
+					<img src="/assets/lang/ico/en.svg" alt="DK flag" />
 				</a>
-				<h1><a class="routerLink" href="/home">Vendel.dk</a></h1>
+				<h1><a class="routerLink" href="home">Vendel.dk</a></h1>
 				<button id="themeSwitcher" aria-label="Skift sidens tema" data-lang-id="btnThemeSwitcher">
-					<span class="icon-lg"> light_mode </span>
+					<span class="icon-lg"> dark_mode </span>
 				</button>
 			</div>
 		</header>
@@ -43,19 +43,19 @@
 			<div class="width-container-xl">
 				<ul class="right">
 					<li>
-						<a class="routerLink" href="/home">
+						<a class="routerLink" href="home">
 							<span class="icon-md"> home </span>
 							<span data-lang-id="linkHome">Forside</span>
 						</a>
 					</li>
 					<li>
-						<a class="routerLink" href="/wishlist">
+						<a class="routerLink" href="wishlist">
 							<span class="icon-md"> redeem </span>
 							<span data-lang-id="linkWishlist">Ønskelister</span>
 						</a>
 					</li>
 					<li>
-						<a class="routerLink hidden" href="/admin">
+						<a class="routerLink hidden" href="admin">
 							<span class="icon-md"> admin_panel_settings </span>
 							<span data-lang-id="linkAdmin">Admin</span>
 						</a>
@@ -67,19 +67,19 @@
 				</button>
 				<ul class="left">
 					<li>
-						<a class="routerLink hidden" href="/profile">
+						<a class="routerLink hidden" href="profile">
 							<span class="icon-md"> person </span>
 							<span data-lang-id="linkProfile">Profil</span>
 						</a>
 					</li>
 					<li>
-						<a class="routerLink" href="/login">
+						<a class="routerLink" href="login">
 							<span class="icon-md"> login </span>
 							<span data-lang-id="linkLogin">Log ind</span>
 						</a>
 					</li>
 					<li>
-						<a class="routerLink" href="/register">
+						<a class="routerLink" href="register">
 							<span class="icon-md"> person_add </span>
 							<span data-lang-id="linkRegister">Opret Bruger</span>
 						</a>
