Changed "DK flag" to "da"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<header>
 			<div class="width-container-xl">
 				<a class="languageLink" aria-label="Skift sidens sprog" data-lang-id="btnLanguageSwitcher">
-					<img src="/assets/lang/ico/en.svg" alt="DK flag" />
+					<img src="/assets/lang/ico/en.svg" alt="en" />
 				</a>
 				<h1><a class="routerLink" href="home">Vendel.dk</a></h1>
 				<button id="themeSwitcher" aria-label="Skift sidens tema" data-lang-id="btnThemeSwitcher">
