--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 			as="style" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+		<link rel="preload" href="/router.js" as="script" crossorigin />
+
+		<link rel="preload" href="/assets/main.css" as="style" />
+
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vendel.dk</title>
 
-		<script src="/router.js"></script>
+		<script src="/router.js" crossorigin></script>
 
 		<link
 			href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Inter:wght@400;700&display=swap"
@@ -98,7 +102,7 @@
 			<small>
 				<span class="icon-sm"> copyright </span>
 				<span data-lang-id="copyright">
-					2022 - Lukas Vendel Mann - Alle Rettigheder Forbeholdes
+					2022 - Lukas Vendel Mann - Alle rettigheder forbeholdes
 				</span>
 			</small>
 		</footer>
