Changed class names on error pages

--- a/routes/error/404.html
+++ b/routes/error/404.html
@@ -1,4 +1,4 @@
-<article class="page-error 404">
+<article id="page" class="page-error width-container-sm">
 	<h2>404 - Not Found</h2>
 	<p>Denne side findes ikke.</p>
 </article>
