--- a/routes/error/403.html
+++ b/routes/error/403.html
@@ -1,4 +1,4 @@
-<article class="page-error 403">
+<article id="page" class="page-error width-container-sm">
 	<h2>404 - Forbidden</h2>
 	<p>Du har ikke adgang til denne side.</p>
 </article>
