Added home page to translation

--- a/routes/home/home.html
+++ b/routes/home/home.html
@@ -1,8 +1,10 @@
-<article class="home width-container-sm">
-	<h2><span>Velkommen til</span><span>Vendel.dk</span></h2>
-	<p>
+<article id="page" class="page-home width-container-sm">
+	<h2><span data-lang-id="homePageWelcome">Velkommen til</span><span>Vendel.dk</span></h2>
+	<p data-lang-id="homePageIntro">
 		Dette er Vendel.dk, en hjemmeside til familien Vendel. Her ligger ønskelister for
 		familiemedlemmer og kommende begivenheder.
 	</p>
-	<p>Hvis du er en del af familien Vendel er du velkommen til at oprette en bruger.</p>
+	<p data-lang-id="homePageInfo">
+		Hvis du er en del af familien Vendel er du velkommen til at oprette en bruger.
+	</p>
 </article>
