--- a/routes/auth/register.html
+++ b/routes/auth/register.html
@@ -1,4 +1,4 @@
-<article class="page-auth width-container-sm">
+<article id="page" class="page-auth width-container-sm">
 	<h2 data-lang-id="pageLoginTitle">Opret Bruger</h2>
 	<form novalidate>
 		<div class="form-group">
