--- a/auth/logout.html
+++ b/auth/logout.html
@@ -90,19 +90,7 @@
 				</ul>
 			</div>
 		</nav>
-		<main>
-			<article class="pageHome widthContainerSM">
-				<h2><span>Velkommen til</span><span>Vendel.dk</span></h2>
-				<p>
-					Dette er Vendel.dk, en hjemmeside til familien Vendel. <br />
-					Her ligger ønskelister for familiemedlemmer og kommende begivenheder.
-				</p>
-				<p>
-					Hvis du er en del af familien Vendel er du velkommen til at oprette en bruger. <br />
-					<small>(Brugeren skal godkendes før den er aktiv)</small>
-				</p>
-			</article>
-		</main>
+		<main></main>
 		<footer>
 			<small>
 				<span class="iconSM"> copyright </span>
