--- a/wishlists/overview.html
+++ b/wishlists/overview.html
@@ -24,11 +24,6 @@
 			rel="stylesheet" />
 
 		<link rel="stylesheet" href="/assets/main.css" />
-
-		<script src="/assets/js/themeSwitcher.js"></script>
-
-		<script src="/assets/js/objects.js"></script>
-		<script src="/assets/js/api.js"></script>
 	</head>
 	<body>
 		<header>
@@ -41,97 +36,28 @@
 		</header>
 		<nav>
 			<div class="widthContainerXL">
-				<ul class="right">
-					<li id="navLinkHome">
+				<ul>
+					<li>
 						<a href="/index.html">
 							<span class="iconMD"> home </span>
 							Forside
 						</a>
 					</li>
-					<li id="navLinkWishlists">
+					<li>
 						<a href="/wishlists/overview.html">
 							<span class="iconMD"> redeem </span>
 							Ønskelister
 						</a>
 					</li>
-					<li id="navLinkAdmin" class="hidden">
-						<a href="/admin.html">
-							<span class="iconMD"> admin_panel_settings </span>
-							Admin
-						</a>
-					</li>
 				</ul>
-				<button id="navBtnMenu">
-					<span class="iconMD"> menu </span>
-					Menu
-				</button>
-				<ul class="left">
-					<li id="navLinkProfile" class="hidden">
-						<a href="/profile.html">
-							<span class="iconMD"> person </span>
-							Profil
-						</a>
-					</li>
-					<li id="navLinkLogin">
-						<a href="/auth/login.html">
-							<span class="iconMD"> login </span>
-							Log ind
-						</a>
-					</li>
-					<li id="navLinkRegister">
-						<a href="/auth/register.html">
-							<span class="iconMD"> person_add </span>
-							Opret Bruger
-						</a>
-					</li>
-					<li id="navLinkLogout" class="hidden">
-						<a href="/auth/logout.html">
-							<span class="iconMD"> logout </span>
-							Log ud
-						</a>
-					</li>
-				</ul>
-			</div>
 		</nav>
 		<main>
-			<article id="empty" class="pageOverview widthContainerXL hidden">
-				<h2>Ønskelister</h2>
+			<article class="pageHome widthContainerSM">
+				<h2><span>Velkommen til</span><span>Vendel.dk</span></h2>
 				<p>
-					Der kunne ikke findes nogen ønskelister på nuværende tidspunkt. <br />
-					Prøv igen senere.
-				</p>
-			</article>
-			<article id="success" class="pageOverview widthContainerXL">
-				<h2>Ønskelister</h2>
-				<ul>
-					<li>
-						<a class="item" href="wishlist.html?wishlist_id=X">
-							<p aria-label="Dato for begivenhed">XX-XX</p>
-							<h3>Ønskelistenavn</h3>
-							<p>Sidst opdateret: <span aria-label="dato">XX-XX-XXXX</span></p>
-						</a>
-					</li>
-					<li>
-						<a class="item" href="wishlist.html?wishlist_id=X">
-							<p aria-label="Dato for begivenhed">XX-XX</p>
-							<h3>Ønskelistenavn</h3>
-							<p>Sidst opdateret: <span aria-label="dato">XX-XX-XXXX</span></p>
-						</a>
-					</li>
-					<li>
-						<a class="item" href="wishlist.html?wishlist_id=X">
-							<p aria-label="Dato for begivenhed">XX-XX</p>
-							<h3>Ønskelistenavn</h3>
-							<p>Sidst opdateret: <span aria-label="dato">XX-XX-XXXX</span></p>
-						</a>
-					</li>
-				</ul>
-			</article>
-			<article id="error" class="pageOverview widthContainerXL hidden">
-				<h2>Ønskelister</h2>
-				<p>
-					Der skete en fejl under hentning af ønskelister. <br />
-					Prøv igen senere.
+					Dette er Vendel.dk, en hjemmeside til familien Vendel. <br />
+					Her ligger ønskelister for familiemedlemmer og kommende begivenheder.
+					<small>(Dette er kun en prototype.)</small>
 				</p>
 			</article>
 		</main>
