--- a/wishlists/wishlist.html
+++ b/wishlists/wishlist.html
@@ -50,14 +50,15 @@
 						</a>
 					</li>
 				</ul>
+			</div>
 		</nav>
 		<main>
-			<article class="pageHome widthContainerSM">
+			<article class="pageWishlist widthContainerSM">
 				<h2><span>Velkommen til</span><span>Vendel.dk</span></h2>
 				<p>
 					Dette er Vendel.dk, en hjemmeside til familien Vendel. <br />
 					Her ligger ønskelister for familiemedlemmer og kommende begivenheder.
-					<small>(Dette er kun en prototype.)</small>
+					<small>(Dette er kun en prototype)</small>
 				</p>
 			</article>
 		</main>
