Added wish functionality and themeSwitcher

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 			rel="stylesheet" />
 
 		<link rel="stylesheet" href="/assets/main.css" />
+
+		<script type="module" src="/assets/js/main.js"></script>
 	</head>
 	<body>
 		<header>
 			<div class="widthContainerXL">
 				<h1><a href="/index.html">Vendel.dk</a></h1>
-				<button class="themeSwitcher" aria-label="Skift sidens tema">
-					<span class="iconLG"> dark_mode </span>
-				</button>
+				<button id="themeSwitcher" class="iconLG" aria-label="Skift sidens tema"></button>
 			</div>
 		</header>
 		<nav>
