Add crossorigin to scripts

--- a/wishlists/overview.html
+++ b/wishlists/overview.html
@@ -25,9 +25,9 @@
 
 		<link rel="stylesheet" href="/assets/main.css" />
 
-		<script type="module" src="/assets/js/main.js"></script>
+		<script type="module" src="/assets/js/main.js" crossorigin></script>
 
-		<script type="module" src="/assets/js/pages/overview.js"></script>
+		<script type="module" src="/assets/js/pages/overview.js" crossorigin></script>
 	</head>
 	<body>
 		<header>
