--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<link rel="stylesheet" href="/assets/main.css" />
 
-		<script type="module" src="/assets/js/main.js"></script>
+		<script type="module" src="/assets/js/main.js" crossorigin></script>
 	</head>
 	<body>
 		<header>
